--- a/css/main.css
+++ b/css/main.css
@@ -1,13 +1,16 @@
-/* img(인라인 요소) 하단에 Baseline 공백을 제거 */
-img {
-	display: block;
-}
-/*INNER*/
-.inner {
-	width: 1100px;
-	margin: 0 auto;
-	position: relative;
-}
+/*BADGES*/
+header .badges {
+	position: absolute;
+	top: 132px;
+	right: 12px;
+  }
+  header .badges .badge {
+	border-radius: 10px;
+	overflow: hidden;
+	margin-bottom: 12px;
+	box-shadow: 4px 4px 10px rgba(0,0,0,.15);
+	cursor: pointer;
+  }
 /*BUTTON*/
 .btn {
 	width: 130px;
